[package]
name = "pythia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
url = "2.3.1"
rand = "0.8.5"
candid = "0.8.2"
ic-cdk = "0.6.0"
serde = "1.0.162"
anyhow = "1.0.71"
num-bigint = "0.4.3"
thiserror = "1.0.40"
serde_json = "1.0.96"
ic-cdk-macros = "0.6.0"
ic-cdk-timers = "0.1.2"
slotmap = { version = "1.0.6", features = ["serde"] }
ic-web3 = { git = "https://github.com/ivanlele/ic-web3", branch="dev" }
ic-dl-utils = { git = "https://github.com/ivanlele/ic-dl-utils", branch="master" }
ic-utils = { package = "canistergeek_ic_rust", version = "0.3.1" }
