[package]
name = "pythia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
url = "2.4.0"
candid = "0.9.6"
ic-cdk = "=0.11.4"
serde = "1.0.164"
anyhow = "1.0.71"
futures = "0.3.28"
num-bigint = "0.4.3"
thiserror = "1.0.40"
serde_json = "1.0.99"
ic-cdk-timers = "0.3.0"
slotmap = { version = "1.0.6", features = ["serde"] }
ic-web3-rs = { git = "https://github.com/orally-network/ic-web3-rs", version = "0.1.3" }
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
derive_builder = "0.12.0"
itertools = "0.11.0"
tokio = { version = "1.34.0", features = ["sync"] }
serde_bytes = "0.11.12"
