[package]
name = "pythia_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.3.1"
candid = "0.8.2"
ic-cdk = "0.6.0"
anyhow = "1.0.71"
futures = "0.3.28"
thiserror = "1.0.40"
ic-cdk-macros = "0.6.0"
ic-cdk-timers = "0.1.2"
primitive-types = "0.12.1"
getrandom = { version = "0.2.9", features = ["js"] }
