[package]
name = "pythia_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
url = "2.3.1"
rand = "0.8.5"
adorn = "0.4.0"
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-web3 = "0.1.7"
anyhow = "1.0.71"
thiserror = "1.0.40"
num-bigint = "0.4.3"
ic-cdk-macros = "0.6.0"
ic-cdk-timers = "0.1.2"
siwe = { git = "https://github.com/domwoe/siwe-rs" }
time = { version = "0.3.20", default-features = false }
